# streambox

./: .gitignore  latencyCollector.sh  run_ysb.sh  run_ysb_latency.sh
CTPL/: ctpl.h  ctpl_stl.h
Kaskade/: Makefile  Makefile.Rules  (+15 more)
streambox/: .clang-format  AppliedPTransform.h  BoundedWindow.cpp  BoundedWindow.h  CMakeLists.txt  Create.h  DoFn.h  Executor.cpp  LookAheadPipelineVisitor.cpp  LookAheadPipelineVisitor.h  MinimalContext.h  MinimalProcessContext.h  NopEvaluator.h  OffsetRangeTracker.h  PaneInfo.h  PerBundleContext.h  README.md  StringUtils.h  ValueContainer.h  Values.cpp  Values.h  WinKeyFrag.h  WindowFn.h  WindowingStrategy.h  WindowsHolder.h  config.h  contributors.txt  creek-map.h  creek-types.h  json.hpp  linux-sizes.h  log.h  measure.h  sloccount.sh
streambox/Join/: Join.cpp  Join.h  JoinEvaluator.h  JoinEvaluator1.h
streambox/LinearRoad/: LinearRoadAccidentDetection.h  LinearRoadFilter.cpp  LinearRoadFilter.h  LinearRoadFilterEvaluator.h  LinearRoadParser.cpp  LinearRoadParser.h  LinearRoadParserEvaluator.h  LinearRoadRecord.h  LinearRoadTollNotification.cpp  LinearRoadTollNotification.h  LinearRoadTollNotificationEvaluator.h  LinearRoadTollRecord.h
streambox/Mapper/: GrepMapper.cpp  GrepMapper.h  GrepMapperEvaluator.h  Mapper.h  SimpleMapper.cpp  SimpleMapper.h  SimpleMapperEvaluator.h  WinMapper.cpp  WinMapper.h  WinMapperEvaluator.h  WindowedGrepMapper.cpp  WindowedGrepMapper.h  WindowedGrepMapperEvaluator.h  WordCountMapper.cpp  WordCountMapper.h  WordCountMapperEvaluator.h  YahooMapper.cpp  YahooMapperEvaluator.h
streambox/NewYorkTaxi/: NYTParser.cpp  NYTParser.h  NYTParserEvaluator.h  NYTQuery.cpp  NYTQuery.h  NYTQueryEvaluator.h  NYTRecord.h  NYTWinKeyReducerCommon.h  NYTWinKeyReducerEvalCommon.h  NYTWinKeyReducerEvalWinBundle.cpp  NYTWinKeyReducerWinBundle.cpp  NYTWindowedSum.cpp  NYTWindowedSum.h  NYTWindowedSumEvaluator.h
streambox/Nexmark/: NexmarkAggregation.cpp  NexmarkAggregation.hpp  NexmarkAggregationEvaluator.hpp  NexmarkFilter.cpp  NexmarkFilter.hpp  NexmarkFilterEvaluator.hpp  NexmarkParser.cpp  NexmarkParser.hpp  NexmarkParserEvaluator.hpp  NexmarkRecord.hpp  NexmarkSink.cpp  NexmarkSink.hpp  NexmarkWinKeyReducerCommon.hpp  NexmarkWinKeyReducerEvalCommon.hpp  NexmarkWinKeyReducerEvalRecordBundle.cpp  NexmarkWinKeyReducerEvalWinBundle.cpp  NexmarkWinKeyReducerRecordBundle.cpp  NexmarkWinKeyReducerWinBundle.cpp
streambox/ParDo/: ParDo.cpp  ParDo.h  ParDoCol2.h  ParDoEvaluator.h  ParDoSimpler.h  ParDoSimplerEvaluator.h  ParUpdateCol2.h  ParUpdateCol2Evaluator.h
streambox/Select/: Select.h  SimpleSelect.h  SimpleSelectEvaluator.h  YahooSelect.h
streambox/Sink/: RecordBitmapBundleSinkEvaluator.h  RecordBitmapBundleSinkEvaluator1.h  RecordBundleSink.cpp  RecordBundleSinkEvaluator.h  RecordBundleSinkEvaluatorJD.h  Sink.cpp  Sink.h  WindowsBundleSink.cpp  WindowsBundleSinkEvaluator.h
streambox/Source/: Bounded.h  BoundedCol2Evaulator.h  BoundedEvaulator.h  NetworkLatencySource.cpp  NetworkLatencySource.h  NetworkLatencySourceEvaluator.h  Unbounded-tweets.h  Unbounded.cpp  Unbounded.h  UnboundedInMemEvaluator.h  UnboundedInMemEvaluatorBase.h  UnboundedInMemEvaluator_2out.h  UnboundedInMemEvaluator_Join.h  UnboundedPseudoEvaluator.h  Unbounded_Join.cpp  Unbounded_Join.h
streambox/Win/: CountBasedTumblingWindow.cpp  CountBasedTumblingWindow.h  CountBasedTumblingWindowEvaluator.h  FixedWindowInto.cpp  FixedWindowInto.h  FixedWindowIntoEvaluator.h  GlobalWindow.h  SessionWindowInto.h  SessionWindowIntoEvaluator.h  WinGBK.cpp  WinGBK.h  WinGBKEvaluator.h
streambox/WinKeyReducer/: WinKeyReducer-linear-road-common.h  WinKeyReducer-netmon.cpp  WinKeyReducer-wc-common.h  WinKeyReducer-wc-recordbundle.cpp  WinKeyReducer-wc-winbundle.cpp  WinKeyReducer-yahoo-common.h  WinKeyReducer-yahoo-recordbundle.cpp  WinKeyReducer-yahoo-winbundle.cpp  WinKeyReducer.cpp  WinKeyReducer.h  WinKeyReducerEval-MT.h  WinKeyReducerEval-netmon.cpp  WinKeyReducerEval-wc-common.h  WinKeyReducerEval-wc-recordbundle.cpp  WinKeyReducerEval-wc-winbundle.cpp  WinKeyReducerEval-yahoo-common.h  WinKeyReducerEval-yahoo-recordbundle.cpp  WinKeyReducerEval-yahoo-winbundle.cpp  WinKeyReducerEval.h  WinKeyReducerEvalRecordBundle.h  WinKeyReducerOps.h
streambox/WinSum/: WinSum-dispatch-eval.h  WinSum-template.h  WinSumBase.cpp  WinSumBase.h  WinSumEval.h  WinSumTvEval.h  WinSum_addlong.cpp  WinSum_addlong.h  WinSum_addlong_tvpair.cpp  WinSum_addlong_tvpair.h  WinSum_mergeset.cpp  WinSum_mergeset.h  WinSum_mergevector.cpp  WinSum_mergevector.h  WindowedSumEvaluator.h  WindowedSumEvaluator1-tvpair.cpp
streambox/Yahoo/: YahooAggregation.cpp  YahooAggregation.h  YahooAggregationEvaluator.h  YahooFilter.cpp  YahooFilter.h  YahooFilterEvaluator.h  YahooParser.cpp  YahooParser.h  YahooParserEvaluator.h  YahooRecord.h
streambox/core/: DualInputTransformEvaluator.h  EvaluationBundleContext.cpp  EvaluationBundleContext.h  Executor.h  Pipeline.cpp  Pipeline.h  PipelineRunner.h  PipelineVisitor.h  SingleInputTransformEvaluator.h  StatefulTransform.h  Transform.cpp  TransformEvaluator.h  TransformTreeNode.h  Transforms-multi.h  Transforms.h
streambox/micro/: CMakeLists.txt  alloc.cpp  boost-progressbar.cpp  boostlock.cpp  json-parser.cpp  mt-numa.cpp  multi-thread-pcre-2.cpp  multi-thread-pcre.cpp  multi-thread-regex-numa-6t.cpp  multi-thread-regex-numa.cpp  multi-thread-regex.cpp  numa-tp.cpp  parser.c  re2.cpp  regex.cpp  rev_iter.cpp  string-as-key.cpp  unique_ptr.cpp
streambox/papi/: papi_conf_global.cfg  papi_sampler.cpp  papi_sampler.hpp
streambox/test/: .gitignore  CreateTest.cpp  networklatency.cpp  regression.py  simple.py  simple1.py  test-common.cpp  test-common.h  test-distinct.cpp  test-grep.cpp  test-join-2.cpp  test-join.cpp  test-kaskade.cpp  test-linear-road.cpp  test-nexmark.cpp  test-nyt-countbased.cpp  test-nyt.cpp  test-tweet.cpp  test-wc.cpp  test-window.cpp  test-wingrep.cpp  test-yahoo-countbased.cpp  test-yahoo-lsds.cpp  test-yahoo-lsds1.cpp  test-yahoo-lsds2.cpp  test-yahoo.cpp  test.cpp  test.py  tweet.py
streambox/test/Debug/: .gitignore  .ignore
(+579 files in other folders)
